# diarise

./: .gitignore  README.md  debug_postprocess.sh  diarise  diarise.py  pyproject.toml  section_transcript.py  whisper_transcribe.py
