[project]
name = "diarise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.12.1",
    "av==16.1.0",
    "certifi==2026.1.4",
    "click==8.3.1",
    "ctranslate2==4.7.1",
    "faster-whisper==1.2.1",
    "filelock==3.20.0",
    "flatbuffers==25.12.19",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "onnxruntime==1.24.1",
    "packaging==26.0",
    "protobuf==6.33.5",
    "pyyaml==6.0.3",
    "setuptools==70.2.0",
    "shellingham==1.5.4",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm==4.67.3",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "webrtcvad==2.0.10",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/"
